# multi-backend-dnn

./: .gitignore  LICENSE  Makefile  README.md  prueba.ipynb  pyproject.toml
illia/: __init__.py  distributions.py  nn.py  support.py
illia/backend/: __init__.py
illia/backend/base/: __init__.py
illia/backend/base/distributions/: __init__.py  base.py
illia/backend/base/nn/: __init__.py  base.py
illia/backend/jax/: __init__.py
illia/backend/jax/distributions/: __init__.py  gaussian.py
illia/backend/jax/nn/: __init__.py  conv.py  linear.py
illia/backend/tensorflow/: __init__.py
illia/backend/tensorflow/distributions/: __init__.py  gaussian.py
illia/backend/tensorflow/nn/: __init__.py  conv.py  linear.py
illia/backend/torch/: __init__.py
illia/backend/torch/distributions/: __init__.py  gaussian.py
illia/backend/torch/nn/: __init__.py  conv.py  linear.py
illia/base/: __init__.py
illia/base/distributions/: __init__.py  base.py
illia/base/nn/: __init__.py  base.py
